# behaviors

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test-prompts.yml
playbook/: jules-api-shape.md  jules-playbook.md
policies/: autonomy_rules.md  quality_gates.md  safety.md
prompts/: canary.md  clarification.md  daily_digest.md  plan_review.md
scripts/: _safety.py  playbook_append.py  self_improve.py
tests/: test_prompts.py  test_safety.py
tests/fixtures/: canary_baseline.json  drift_classified.json  plan_classified.json  question_classified.json
